<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">EventTimer</string>

    <!-- Settings -->
    <string name="action_settings">Settings</string>

    <!-- Main Menu -->
    <string name="participant_entry">Participant Entry</string>
    <string name="time_record">Time Recorder</string>
    <string name="bib_entry">Bib Order Entry</string>
    <string name="results">Results</string>

    <!-- Bib Entry -->
    <string name="title_activity_bib_order_list">BibOrderListActivity</string>
    <string name="action_jump_to_bib">Jump to Bib</string>
    <string name="add_new_bib">Add Bib</string>
    <string name="edit_bib">Edit Bib</string>

    <!-- Results -->
    <string name="title_activity_results_list">ResultsListActivity</string>

    <!-- Timer -->
    <string name="title_activity_timer">TimerActivity</string>

    <!-- Participants -->
    <string name="title_activity_participant_list">ParticipantListActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="duplicate_bib_found">A bib with that number has already been entered</string>
    <string name="title_activity_participant_pager">ParticipantPagerActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="participants_title">Participants</string>
    <string name="new_participant">New Participant</string>
    <string name="delete_participant">Delete Participant</string>
    <string name="participant_first_name_label">First</string>
    <string name="participant_first_name_hint">First Name</string>
    <string name="participant_last_name_label">Last</string>
    <string name="participant_last_name_hint">Last name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="participant_age_label">Age</string>
    <string name="participant_age_hint">Age</string>
    <string name="bib_number">Bib:</string>
    <string name="add_custom_time">Add Custom Time</string>

</resources>
