<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/participant_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/participant_entry"
            android:textColor="@color/white"
            android:background="@color/red"
            android:layout_marginBottom="20dp"
            />
        <Button
            android:id="@+id/time_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_record"
            android:textColor="@color/white"
            android:background="@color/red"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/bib_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bib_entry"
            android:textColor="@color/white"
            android:background="@color/red"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/results"
            android:textColor="@color/white"
            android:background="@color/red"
            />
    </LinearLayout>

</RelativeLayout>
